<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:text="Add New Visitor"
        android:textSize="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <EditText
        android:id="@+id/VisitorName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/vname"
        android:layout_marginTop="35dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <EditText
        android:id="@+id/vGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/vgender"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>
    <EditText
        android:id="@+id/vDob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/vDob"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>
    <EditText
        android:id="@+id/vDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/vDate"/>
    <EditText
        android:id="@+id/vTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/vTime"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>
    <Button
        android:id="@+id/buttonAddvRec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_rec"
        android:backgroundTint="@color/colorAccent"
        android:layout_marginTop="32dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>
    <Button
        android:id="@+id/buttonvCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/cancel"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <ProgressBar
        android:id="@+id/progressBarVisitRec"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

</LinearLayout>