<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
        android:id="@+id/textViewEditStaffProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp"
        android:text="Edit Staff Profile"
        android:textSize="24dp" />

    <ImageView
        android:id="@+id/imageViewStaffImage"
        android:layout_width="match_parent"
        android:layout_height="137dp"
        android:layout_marginTop="28dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp"
        app:srcCompat="@drawable/ic_baseline_account" />

    <EditText
        android:id="@+id/editTextStaffEDName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:hint="@string/P_name"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp"/>

    <EditText
        android:id="@+id/editTextStaffEDGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/P_Gender"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp" />

    <EditText
        android:id="@+id/editTextStaffEDDob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/P_dob"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp" />

    <EditText
        android:id="@+id/editTextStaffEDPosition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="Position"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp"/>

    <EditText
        android:id="@+id/editTextStaffEDEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp"/>


    <Button
        android:id="@+id/buttonStaffEDSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#00BCD4"
        android:text="@string/submit"
        android:layout_marginTop="25dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp"/>

    <Button
        android:id="@+id/buttonStaffEDCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#00BCD4"
        android:text="@string/cancel"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp"/>

    </LinearLayout>
</ScrollView>