<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp"
        tools:context=".staffui.Staffregister">


        <ImageView
            android:id="@+id/imageViewProfile"
            android:layout_width="132dp"
            android:layout_height="114dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="5dp"
            app:srcCompat="@drawable/logo" />
        <TextView
            android:id="@+id/welcomeS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="15dp"
            android:text="Welcome to MyResidentApp"
            android:textSize="17dp"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/welcomeS2"
            android:layout_width="match_parent"
            android:layout_height="23dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="15dp"
            android:text="Sign Up to get more feature."
            android:textColor="#000000"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextStaffName"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:layout_gravity="center" />

        <EditText
            android:id="@+id/editTextStaffGender"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:hint="@string/gender"
            android:inputType="textPersonName"
            android:layout_gravity="center" />

        <EditText
            android:id="@+id/editTextStaffDob"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:hint="@string/dob"
            android:inputType="textPersonName"
            android:layout_gravity="center" />
        <EditText
            android:id="@+id/editTextStaffPosition"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:hint="@string/position"
            android:layout_gravity="center" />

        <EditText
            android:id="@+id/editTextStaffRUsername"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:hint="@string/email"
            android:layout_gravity="center" />


        <EditText
            android:id="@+id/editTextStaffRPass"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/buttonStaffSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#00BCD4"
            android:layout_marginTop="16dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:text="@string/sign_up" />

        <Button
            android:id="@+id/buttonStaffCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="#00BCD4"
            android:text="@string/cancel" />

        <TextView
            android:id="@+id/textViewTextLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:text="@string/text1"
            android:layout_gravity="center"
            android:textSize="18sp" />

        <ProgressBar
            android:id="@+id/progressBarStaffRes"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:visibility="invisible" />


    </LinearLayout>

</ScrollView>